--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
+    "@fastify/formbody": "^8.0.2",
     "@fastify/helmet": "^13.0.2",
     "@modelcontextprotocol/sdk": "^1.21.0",
     "@solana/web3.js": "^1.98.4",
