feat: refactored the server

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "@misskey-dev/node-http-message-signatures": "^0.0.10"
+  }
 }
