--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,15 @@ node_modules/
 dist/
 .env
 .env.*
+!.env.example
+!client/.env.example
+
 server/node_modules/
 server/dist/
 server/.env
 server/.env.*
+!server/.env.example
+
 .DS_Store
 coverage/
 *.log
