fix: agent client mcp oauth flow update

--- a/server/.env.example
+++ b/server/.env.example
@@ -12,3 +12,9 @@ CLOUDINARY_API_KEY=your-key
 CLOUDINARY_API_SECRET=your-secret
 PLATFORM_FEE_BPS=50
 X402_FACILITATOR_URL=https://facilitator.example.com
+CLIENT_APP_URL=http://localhost:5173
+CLIENT_AUTH_PATH=/auth
+SESSION_COOKIE_NAME=pc_session
+SESSION_COOKIE_DOMAIN=
+SESSION_COOKIE_SECURE=false
+SESSION_COOKIE_MAX_AGE=604800
