feat: add tap_digest and improved receipts ui

--- a/server/.env.example
+++ b/server/.env.example
@@ -11,7 +11,11 @@ CLOUDINARY_CLOUD_NAME=your-cloud
 CLOUDINARY_API_KEY=your-key
 CLOUDINARY_API_SECRET=your-secret
 PLATFORM_FEE_BPS=50
-X402_FACILITATOR_URL=https://facilitator.example.com
+X402_FACILITATOR_URL=https://facilitator.payai.network
+X402_NETWORK=solana-devnet
+X402_PAYTO=YOUR_PLATFORM_WALLET_ADDRESS
+X402_USDC_MINT=4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU
+X402_USDC_DECIMALS=6
 CLIENT_APP_URL=http://localhost:5173
 CLIENT_AUTH_PATH=/auth
 SESSION_COOKIE_NAME=pc_session
